--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 *.png
 *.txt
+detection/pole-localization-main/kitti
 
 # IntelliJ project files
 .idea
@@ -153,3 +154,4 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+/detection/pole-localization-main/kitti/raw_data/
